# Nekobi

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mk  README.md
.github/workflows/: build.yml
plugins/: Makefile.mk
plugins/Nekobi/: CMakeLists.txt  DistrhoArtworkNekobi.cpp  DistrhoPluginInfo.h  DistrhoPluginNekobi.cpp  DistrhoUINekobi.cpp  DistrhoUINekobi.hpp  Makefile  NekoWidget.hpp  makeimage.sh
